v1.Beta1-undone time-2021/2/12-1 更新 build.gradle 正做 任务配置 正做 支持Kether 修改 对话配置

--- a/src/main/resources/dialog/example.yml
+++ b/src/main/resources/dialog/example.yml
@@ -1,10 +1,10 @@
 # 对话ID
 dialog_1:
-  # 对话目标
-  target: "nbt=dialog1"
-  # 触发条件
+  # 交互NPC
+  npcID: "test"
+  # 对话需要满足的触发条件 Kether
   condition:
-    - "questTag=questID_1"
+    - "check qeTag *questID_1"
   # 关于全息对话
   dialog:
     # 对话主体
