v1.Beta1-undone time-2021/2/14-1 更新 build.gradle 正做 任务配置 正做 支持Kether 正做 支持Adyeshach 修改 对话配置

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,11 @@
-# 设置 | Setting
+# 设置
 setting:
-  # 选择语言 | Choose language
+  # 选择语言
   lang: "zh_CN"
+
+# 对话设置
+dialog:
+  # 显示形式
+  display: "holo"
+  # 交互NPC插件
+  npcPlugin: "Adyeshach"
