--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.4.0-rc'
-    id 'com.github.johnrengelman.shadow' version '4.0.4'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.20'
+    id 'com.github.johnrengelman.shadow' version '6.1.0'
 }
 
 group 'cn.inrhor.questengine'
@@ -49,7 +49,9 @@ processResources {
                 'main': project.group + '.boot.PluginBoot',
                 'version': project.version,
                 'authors': ["inrhor"],
-                'softdepend': []
+                'softdepend': [
+                        "Adyeshach"
+                ]
         )
     }
 }
