--- a/src/main/resources/quest/采集任务/setting.yml
+++ b/src/main/resources/quest/采集任务/setting.yml
@@ -19,7 +19,7 @@ accept:
   # 条件 Kether
   condition:
     - "permission *quest.crop.1"
-    - "check *inrhor is papi *%player_name"
+    - "check *inrhor is papi *%player_name%"
     - "check papi *100.0 <= papi *%vault_eco_balance%"
 # 关于任务失败设置，满足条件自动放弃
 failure:
