v1.Beta1-undone time-2021/2/15-1 完成 支持Adyeshach 完成 支持Citizens 正做 任务配置 正做 支持Kether 修改 对话配置

--- a/build.gradle
+++ b/build.gradle
@@ -48,10 +48,7 @@ processResources {
                 'name': rootProject.name,
                 'main': project.group + '.boot.PluginBoot',
                 'version': project.version,
-                'authors': ["inrhor"],
-                'softdepend': [
-                        "Adyeshach"
-                ]
+                'authors': ["inrhor"]
         )
     }
 }
