--- a/src/main/resources/quest/采集任务/setting.yml
+++ b/src/main/resources/quest/采集任务/setting.yml
@@ -19,10 +19,10 @@ accept:
   # 条件 Kether
   condition:
     - "permission *quest.crop.1"
-    - "check *inrhor is papi *%player_name%"
-    - "check papi *100.0 <= papi *%vault_eco_balance%"
+    - "check player name is *inrhor"
+    - "check player balance > *100"
 # 关于任务失败设置，满足条件自动放弃
 failure:
   check: 1
   condition:
-    - "check *100.0 > papi *%vault_eco_balance%"
+    - "check player balance < *100"
