--- a/src/main/resources/dialog/example.yml
+++ b/src/main/resources/dialog/example.yml
@@ -13,7 +13,7 @@ dialog_1:
       # 文字组
       text:
         # 在 主体位置 基础上增加的值
-        addLocation: "fixedLocation left 1.0 1.0"
+        addLocation: "fixedLocation left 2.5 2.5"
         # 内容（时间均采用Tick）
         #   iHoloWrite 延迟 打字速度 内容
         content:
@@ -21,42 +21,42 @@ dialog_1:
           - "<iHoloWrite 10 5 '&f&l面向异世界的任务系统'>"
       # 物品组
       item:
-        addLocation: "fixedLocation left 1.0 1.0"
+        addLocation: "fixedLocation left 2.5 2"
         # 内容（每行仅一个物品）
         content:
           - "itemNormal 20 item_1"
           - "itemNormal 60 item_2"
       # 对话时长，结束后弹出对话回复选项
       #      -1 为 自动根据文字组动态时长而判断
-      frame: -1
+      frame: 20
     # 回复
     reply:
       # 对话回复选项ID
       1:
         # 文字组
         text:
-          addLocation: "fixedLocation left 1.0 1.0"
+          addLocation: "fixedLocation left 2.5 1.5"
           content:
             - "&c&l牛逼！！！"
             - "&f&l666666"
         # 物品组
         item:
           # 在 主体位置 基础上增加的值
-          addLocation: "fixedLocation left 1.0 1.0"
+          addLocation: "fixedLocation left 2.5 1"
           # 内容（每行仅一个物品）
           content:
-            - "itemNormal 60 item_2"
+            - "item_2"
         # Kether脚本
         script:
           - ""
       re:
         text:
-          addLocation: "fixedLocation left 1.0 1.0"
+          addLocation: "fixedLocation left 4.5 1.5"
           content:
             - "&b&l暗示评分"
         item:
-          addLocation: "fixedLocation left 1.0 1.0"
+          addLocation: "fixedLocation left 4.5 1.0"
           content:
-            - "itemNormal 60 item_1"
+            - "item_1"
         script:
           - ""
