v1.Alpha1-undone time-2021/2/27-1 正做 对话回复 正做 任务配置 正做 支持Kether 正做 玩家数据 更新 config.yml 更新 build.gradle

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,7 +2,18 @@
 setting:
   # 选择语言
   lang: "zh_CN"
+
 # 数据存储
+date:
+  # 存储类型 YAML MYSQL
+  type: YAML
+  # 数据库设置
+  host: localhost
+  port: 3306
+  user: root
+  password: "root"
+  database: quen
+  table: quest_engine
 
 # 对话设置
 dialog:
