--- a/build.gradle
+++ b/build.gradle
@@ -1,61 +1,56 @@
 plugins {
     id 'java'
+    id 'io.izzel.taboolib' version '1.3'
     id 'org.jetbrains.kotlin.jvm' version '1.4.20'
-    id 'com.github.johnrengelman.shadow' version '6.1.0'
 }
 
-group 'cn.inrhor.questengine'
-version '1.0.0.Beta1'
+group = 'cn.inrhor.questengine'
+version = '1.0.0-Alpha1'
 
-sourceCompatibility = 1.8
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
+
+taboolib {
+    tabooLibVersion = '5.55'
+    loaderVersion = '2.12'
+    classifier = null
+    builtin = true
+}
 
 repositories {
-    maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-    maven { url 'http://repo.ptms.ink/repository/codemc-nms/' }
-    maven { url 'http://repo.ptms.ink/repository/maven-releases/' }
-    maven { url 'https://jitpack.io' }
-    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
-    maven { url 'https://repo.codemc.org/repository/maven-public' }
-    maven { url 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
-    maven { url 'https://rayzr.dev/repo/' }
-    maven { url "http://repo.dakanilabs.com/repository/public/" }
-    maven { url "http://repo.citizensnpcs.co/"}
+    mavenCentral()
 }
 
 dependencies {
-    compile 'ink.ptms.core:v11600:11600:all'
-    compile 'org.jetbrains.kotlin:kotlin-stdlib'
-    compile 'org.bstats:bstats-bukkit:1.7'
-    compile 'io.izzel.taboolib:TabooLib:5.55:all'
-    compile 'io.izzel.taboolib:TabooLibLoader:2.12:all'
-    compile 'me.clip:placeholderapi:2.10.9'
-    compile 'ink.ptms.adyeshach:Adyeshach:1.0.4'
-    compile 'net.citizensnpcs:citizensapi:2.0.27-SNAPSHOT'
-    shadow fileTree(dir: 'libs', includes: ['*.jar'])
-}
-
-shadowJar {
-    dependencies {
-        include dependency('io.izzel.taboolib:TabooLibLoader.*')
-    }
-    relocate 'io.izzel.taboolib.loader', project.group + '.boot'
+    implementation 'ink.ptms.core:v11600:11600:all'
+    implementation 'ink.ptms.adyeshach:Adyeshach:1.1.9'
+    implementation 'public:Citizens:1.0.0'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib'
+    implementation fileTree(dir: 'libs', includes: ['*.jar'])
 }
 
 processResources {
     from(sourceSets.main.resources.srcDirs) {
         include 'plugin.yml'
         expand(
-                'name': rootProject.name,
-                'main': project.group + '.boot.PluginBoot',
-                'version': project.version,
-                'authors': ["inrhor"]
+                name: rootProject.name,
+                main: project.group + ".boot.PluginBoot",
+                version: project.version,
+                libVersion: taboolib.tabooLibVersion,
+                loaderVersion: taboolib.loaderVersion,
+                authors: ["inrhor"]
         )
     }
 }
 
 compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
+
 compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
