--- a/src/main/resources/space/dialog/example.yml
+++ b/src/main/resources/space/dialog/example.yml
@@ -8,69 +8,28 @@ dialog_1:
     - "check player name is *inrhor"
   # 关于全息对话
   dialog:
-    # 对话主体
-    own:
-      # 文字组
-      text:
-        # 在 主体位置 基础上增加的值
-        addLocation: "fixedLocation left 2.5 2.5"
-        # 内容（时间均采用Tick）
-        #   iHoloWrite 延迟 打字速度 内容
-        content:
-          - "<iHoloWrite 10 4 '&3&lQuest &f&lEngine'><iHoloWrite 20 3 '&r   &c&l任&e&l务&a&l引擎'>"
-          - "<iHoloWrite 10 5 '&f&l面向异世界的任务系统'>"
-      # 物品组
-      item:
-        addLocation: "fixedLocation left 2.5 2"
-        # 内容（每行仅一个物品）
-        content:
-          - "itemNormal 20 item_1"
-          - "itemNormal 60 item_2"
-      # 对话时长，结束后弹出对话回复选项
-      #      -1 为 自动根据文字组动态时长而判断
-      frame: 20
-    # 回复
-    reply:
-      # 对话回复选项ID
-      1:
-        # 点击框
-        hitBox:
-          addLocation: "fixedLocation left 2.0 1.5"
-          # 点击框半径
-          radius: 2
-          # 鼠标看向此点击框会显示物品
-          show:
-            # 基于 点击框 基础上改动Y值
-            addY: 0
-            # 显示的物品
-            item: "item_2"
-        # 文字组
-        text:
-          addLocation: "fixedLocation left 2.0 1.5"
-          content:
-            - "&c&l牛逼！！！"
-            - "&f&l666666"
-        # 物品组
-        item:
-          # 在 主体位置 基础上增加的值
-          addLocation: "fixedLocation left 2.0 1"
-          # 内容（每行仅一个物品）
-          content:
-            - "item_2"
-        # Kether脚本
-        script:
-          - ""
-      re:
-        hitBox:
-          addLocation: "fixedLocation left 5.0 1.5"
-          radius: 2
-        text:
-          addLocation: "fixedLocation left 5.0 1.5"
-          content:
-            - "&b&l暗示评分"
-        item:
-          addLocation: "fixedLocation left 5.0 1.0"
-          content:
-            - "item_1"
-        script:
-          - ""
+    - "initLoc left 2.5 2.5"
+    - "nextY 1.2"
+    - "frame 20"
+    - "text <iHoloWrite 10 4 '&3&lQuest &f&lEngine'><iHoloWrite 20 3 '&r   &c&l任&e&l务&a&l引擎'>"
+    - "text <iHoloWrite 10 5 '&f&l面向异世界的任务系统'>"
+    - "addLoc right 5.5 1.0"
+    - "nextY 2.4"
+    - "itemNormal 20 item_1"
+    - "itemNormal 60 item_2"
+  reply:
+    reply_1:
+      content:
+        - "hitBox left 2.5 1.5 2 item_2 2"
+        - "initLoc left 2.0 1.5"
+        - "nextY 1.2"
+        - "text &c&l牛逼！！！"
+        - "text &f&l666666"
+        - "item item_1"
+      script:
+        - ""
+    r2:
+      content:
+        - ""
+      script:
+        - ""
