v1.Alpha1-undone time-2021/5/2-1 - 正在重写 相关全息对话模块

--- a/src/main/resources/space/dialog/example.yml
+++ b/src/main/resources/space/dialog/example.yml
@@ -6,7 +6,9 @@ dialog_1:
   condition:
     - "permission *dialog.prm.1"
     - "check player name is *inrhor"
-  # 关于全息对话
+  # 可选对话类型
+  type: holo
+  # 关于对话 如下是全息对话示例
   dialog:
     - "initLoc left 2.5 2.5"
     - "nextY 1.2"
