v1.Alpha1-undone time-2021/6/13-1 - 正在重写 相关全息对话模块

--- a/src/main/resources/space/dialog/example.yml
+++ b/src/main/resources/space/dialog/example.yml
@@ -13,8 +13,8 @@ dialog_1:
     - "initLoc left 2.5 2.5"
     - "nextY 1.2"
     - "frame 20"
-    - "text <iHoloWrite 10 4 '&3&lQuest &f&lEngine'><iHoloWrite 20 3 '&r   &c&l任&e&l务&a&l引擎'>"
-    - "text <iHoloWrite 10 5 '&f&l面向异世界的任务系统'>"
+    - "text <textWrite 10 4 '&3&lQuest &f&lEngine'><textWrite 20 3 '&r   &c&l任&e&l务&a&l引擎'>"
+    - "text <textWrite 10 5 '&f&l面向异世界的任务系统'>"
     - "addLoc right 5.5 1.0"
     - "nextY 2.4"
     - "itemNormal 20 item_1"
