--- a/src/main/resources/space/dialog/example.yml
+++ b/src/main/resources/space/dialog/example.yml
@@ -4,30 +4,30 @@ dialog_1:
   npcID: "test"
   # 对话需要满足的触发条件
   condition:
-    - "permission *dialog.prm.1"
-    - "check player name is *inrhor"
+    - permission *dialog.prm.1
+    - check player name is *inrhor
   # 可选对话类型
   type: holo
   # 关于对话 如下是全息对话示例
   dialog:
-    - "initLoc left 2.5 2.5"
-    - "nextY 1.2"
-    - "reply 20"
-    - "text <textWrite 40 2 '&3&lQuest &f&lEngine'><textWrite 20 2 '&r   &c&l任&e&l务&a&l引擎'>"
-    - "nextY -0.3"
-    - "text <textWrite 10 3 '&f&l面向异世界的任务系统'>"
-    - "addLoc right 5.5 1.0"
-    - "itemNormal 20 item_1"
-    - "itemNormal 60 item_2"
+    - initLoc left 2.5 2.5
+    - nextY 1.2
+    - reply 20
+    - text <textWrite 40 2 "&3&lQuest &f&lEngine"><textWrite 20 2 "&r   &c&l任&e&l务&a&l引擎">
+    - nextY -0.3
+    - text <textWrite 10 3 "&f&l面向异世界的任务系统">
+    - addLoc right 5.5 1.0
+    - itemNormal 20 item_1
+    - itemNormal 60 item_2
   reply:
     reply_1:
       content:
-        - "hitBox left 2.5 1.5 3 3 3 3 3 3 5 item_2 2"
-        - "initLoc left 2.0 1.5"
-        - "nextY -1.0"
-        - "text &c&l牛逼！！！"
-        - "text &f&l666666"
-        - "item item_1"
+        - hitBox left 2.5 1.5 3 3 3 3 3 3 5 item_2 2
+        - initLoc left 2.0 1.5
+        - nextY -1.0
+        - text "&c&l牛逼！！！"
+        - text "&f&l666666"
+        - item item_1
       script:
         - ""
     r2:
