--- a/src/main/resources/space/quest/cropQuest/main/crop_start/target.yml
+++ b/src/main/resources/space/quest/cropQuest/main/crop_start/target.yml
@@ -3,12 +3,12 @@ target:
     event: give adych item
     adych:
       - test
-    item: material *apple 3
+    item: apple 3
     time: s 60
     reward: 1 false
   2:
     event: break block
-    block: material *stone 10
+    block: stone 10
     time: minute 5
     reward: all false
   3:
