v1.Alpha1-undone time-2021/7/11-3 - 任务模块 do...     - 任务单元     - 任务数据     - 任务目标     - 任务控制     - 任务奖励     - 任务管理     - API

--- a/src/main/resources/space/quest/cropQuest/main/crop_start/control.yml
+++ b/src/main/resources/space/quest/cropQuest/main/crop_start/control.yml
@@ -1,6 +1,6 @@
 kether:
   - player gamemode to *3
-  - sendPacket *packet_1 world 100 10 12
+  - send packet *packet_1 where *world 100 10 12
   - tell xx
   - wait *s 10
   - tell xxx
