v1.Alpha1-undone time-2021/7/11-4 - 任务模块 do...     - 任务内容 finish     - 任务数据     - 任务目标     - 任务控制     - 任务奖励 finish     - 任务管理     - API - 数据包模块

--- a/src/main/resources/space/quest/cropQuest/main/crop_start/control.yml
+++ b/src/main/resources/space/quest/cropQuest/main/crop_start/control.yml
@@ -1,8 +1,8 @@
 kether:
   - player gamemode to *3
-  - send packet *packet_1 where *world 100 10 12
+  - packet send player packet_1 where *world 100 10 12
   - tell xx
-  - wait *s 10
+  - wait s 10
   - tell xxx
-  - wait *minute 1
+  - wait minute 1
   - player tp ...
