v1.Alpha1-undone time-2021/7/12-1 - 任务模块 do...     - 任务内容 finish     - 任务数据     - 任务目标     - 任务控制     - 任务奖励 finish     - 任务管理     - API - 数据包模块 finish

--- a/src/main/resources/space/packet/example.yml
+++ b/src/main/resources/space/packet/example.yml
@@ -2,7 +2,9 @@
 #   重复接受会被覆盖，因此发送多个数据包需要构造多个方法
 packet_1:
   hook: normal
-  type: ARMOR_STAND
+  entityType: ARMOR_STAND
+  # all or self
+  viewer: all
   mate:
     - equip head item_1
     - displayName " " false
