--- a/src/main/resources/space/quest/cropQuest/main/crop_start/control.yml
+++ b/src/main/resources/space/quest/cropQuest/main/crop_start/control.yml
@@ -1,6 +1,6 @@
 kether:
   - player gamemode to *3
-  - packet send player packet_1 where *world 100 10 12
+  - packet send packet_1 where location *world *100 *10 *12
   - tell xx
   - wait s 10
   - tell xxx
