v1.Alpha1-undone time-2021/7/12-4 - 任务模块 do... - 协同模式 do...

--- a/src/main/resources/space/quest/cropQuest/setting.yml
+++ b/src/main/resources/space/quest/cropQuest/setting.yml
@@ -4,12 +4,12 @@ questID: "quest_1"
 name: "采集农作物任务"
 # 从哪个主线任务开始，此为主线任务ID
 startMainQuestID: "main_quest_1"
-# 任务人员模式
+# 任务成员模式
 mode:
   # 可选如下
   #   personal  单人
-  #   team  协作
-  type: "team"
+  #   collaboration  协作
+  type: "collaboration"
   amount: -1
 # 关于接受任务设置
 accept:
