v1.Alpha1-undone time-2021/7/14-1 - 任务模块 do... - 协同模式 do...

--- a/src/main/resources/space/quest/cropQuest/setting.yml
+++ b/src/main/resources/space/quest/cropQuest/setting.yml
@@ -11,6 +11,8 @@ mode:
   #   collaboration  协作
   type: "collaboration"
   amount: -1
+  # 共享任务数据
+  shareData: true
 # 关于接受任务设置
 accept:
   # 需要满足条件数
