v1.Alpha1-undone time-2021/7/16-2 - 任务模块 do... - 协同模式 do... - 数据模块 do...

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,13 +7,14 @@ setting:
 date:
   # 存储类型 YAML MYSQL
   type: YAML
-  # 数据库设置
-  host: localhost
-  port: 3306
-  user: root
-  password: "root"
-  database: quen
-  table: quest_engine
+  mysql:
+    # 数据库设置
+    host: localhost
+    port: 3306
+    user: root
+    password: password
+    database: questengine
+    table: quest_engine
 
 # 对话设置
 dialog:
