v1.Alpha1-undone time-2021/7/18-1 - 任务模块 do... - 协同模式 do... - 数据模块 do...

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,7 @@ main: ${main}
 version: ${version}
 api-version: "1.13"
 authors: ${authors}
+
+lib-download: true
+lib-version: ${libVersion}
+loader-version: ${loaderVersion}
