--- a/src/main/resources/space/quest/cropQuest/main/crop_start/target.yml
+++ b/src/main/resources/space/quest/cropQuest/main/crop_start/target.yml
@@ -1,17 +1,17 @@
 target:
   1:
-    event: give adych item
+    name: give adych item
     adych:
       - test
     item: apple 3
     time: s 60
     reward: 1 false
   2:
-    event: break block
+    name: break block
     block: stone 10
     time: minute 5
     reward: all false
   3:
-    event: player die
+    name: player die
     time: minute 1
     reward: 2 true
