--- a/src/main/resources/space/quest/cropQuest/setting.yml
+++ b/src/main/resources/space/quest/cropQuest/setting.yml
@@ -2,8 +2,8 @@
 questID: "quest_1"
 # 任务名称
 name: "采集农作物任务"
-# 从哪个主线任务开始，此为主线任务ID
-startMainQuestID: "main_quest_1"
+# 从哪个内部任务开始，此为内部任务ID
+startInnerQuestID: "main_quest_1"
 # 任务成员模式
 mode:
   # 可选如下
