--- a/src/main/resources/space/quest/cropQuest/inner/crop_start/option.yml
+++ b/src/main/resources/space/quest/cropQuest/inner/crop_start/option.yml
@@ -1,2 +1,15 @@
+# 内部任务ID
 innerQuestID: "main_quest_1"
+# 下一个内部任务ID，空则无
 nextInnerQuestID: "main_quest_2"
+
+# 内部任务描述
+description:
+  - ""
+  - "&8&l[ &3&lQuestEngine &8&l]"
+  - ""
+  - "&a这是一个关于农业的任务主线之一"
+  - "&r   收集家"
+  - ""
+  - "     &r&l状态 &7%state%"
+  - ""
