v1.Alpha1-undone time-2021/7/29-1 - 更多默认任务目标 do...

--- a/src/main/resources/space/quest/cropQuest/inner/crop_start/target.yml
+++ b/src/main/resources/space/quest/cropQuest/inner/crop_start/target.yml
@@ -1,9 +1,9 @@
 target:
   1:
-    name: give adych item
-    adych:
+    name: give ady item
+    id:
       - test
-    item: apple 3
+    item: "minecraft:stone;amount:5"
     time: s 60
     reward: 1 false
     description:
