v1.Alpha1-undone time-2021/8/1-2 - update TabooLib-6 do...

--- a/src/main/resources/space/packet/example.yml
+++ b/src/main/resources/space/packet/example.yml
@@ -6,7 +6,7 @@ packet_1:
   # all or self
   viewer: all
   mate:
-    - equip head item_1
+    - equip HEAD item_1
     - displayName " " false
     - visible false
 
