--- a/src/main/resources/space/dialog/example.yml
+++ b/src/main/resources/space/dialog/example.yml
@@ -11,20 +11,20 @@ dialog_1:
   type: holo
   # 关于对话 如下是全息对话示例
   dialog:
-    - initLoc left 2.5 2.5
+    - initLoc dir left add 2.5 2.5
     - nextY 1.2
     - reply 20
     - text <textWrite 40 2 "&3&lQuest &f&lEngine"><textWrite 20 2 "&r   &c&l任&e&l务&a&l引擎">
     - nextY -0.3
     - text <textWrite 10 3 "&f&l面向异世界的任务系统">
-    - addLoc right 5.5 1.0
-    - itemNormal 20 item_1
-    - itemNormal 60 item_2
+    - addLoc dir right add 5.5 1.0
+    - itemWrite 20 use normal item item_1
+    - itemWrite 60 use normal item item_2
   reply:
     reply_1:
       content:
-        - hitBox left 2.5 1.5 3 3 3 3 3 3 5 item_2 2
-        - initLoc left 2.0 1.5
+        - hitBox dir left add 2.5 1.5 sizeX 3 3 sizeY 3 3 sizeZ 3 3 long 5 item item_2 boxY 2
+        - initLoc dir left add 2.0 1.5
         - nextY -1.0
         - text "&c&l牛逼！！！"
         - text "&f&l666666"
