v1.Alpha1-undone time-2021/8/3-2 - add more default quest targets

--- a/src/main/resources/space/quest/cropQuest/inner/crop_start/target.yml
+++ b/src/main/resources/space/quest/cropQuest/inner/crop_start/target.yml
@@ -22,7 +22,7 @@ target:
       - "    &r剩余时间 &8%time%"
       - ""
   3:
-    name: self death
+    name: player death
     cause:
       - DROWNING
       - SUFFOCATION
