v1.Alpha1-undone time-2021/8/5-3 - 优化控制模块

--- a/src/main/resources/space/quest/cropQuest/inner/crop_start/control.yml
+++ b/src/main/resources/space/quest/cropQuest/inner/crop_start/control.yml
@@ -1,3 +1,6 @@
+# 最高级控制： highest
+# 普通控制： normal
+Priority: normal
 kether:
   - player gamemode to *3
   - packet send packet_1 where location *world *100 *10 *12
