--- a/src/main/resources/space/quest/cropQuest/inner/crop_start/control.yml
+++ b/src/main/resources/space/quest/cropQuest/inner/crop_start/control.yml
@@ -11,13 +11,13 @@ highest:
   kether:
     - packet send packet_1 where location *world *100 *10 *12
     - enterPacket to packet_1
-    - wait s 5 to this the highest
+    - wait s 5 to @quest the highest
     - subtitle *"&f这是田园农庄场"
-    - wait s 3 to this the highest
+    - wait s 3 to @quest the highest
     - title *"&6农民" subtitle *"&f现在赋予你一个职位"
-    - wait s 3 to this the highest
+    - wait s 3 to @quest the highest
     - subtitle *"&f请你采集这一片农作物"
-    - wait s 3 to this the highest
+    - wait s 3 to @quest the highest
     - subtitle *"&a完成后我将会给予你丰厚奖励"
     - tpto loaction *world *100 *3 *12
     - player gamemode to *survival
