--- a/src/main/resources/space/quest/cropQuest/inner/crop_start/control.yml
+++ b/src/main/resources/space/quest/cropQuest/inner/crop_start/control.yml
@@ -19,7 +19,7 @@ highest:
     - subtitle *"&f请你采集这一片农作物"
     - waitTime s 3 to @quest the highest
     - subtitle *"&a完成后我将会给予你丰厚奖励"
-    - player loaction tp location *world *96 *73 *-206
+    - player loaction to location *world *96 *73 *-206
     - player gamemode to *survival
 # 普通控制
 normal:
