--- a/src/main/resources/space/packet/example.yml
+++ b/src/main/resources/space/packet/example.yml
@@ -1,14 +1,19 @@
 # 数据包ID
-#   重复接受会被覆盖，因此发送多个数据包需要构造多个方法
 packet_1:
   hook: normal
   entityType: ARMOR_STAND
   # all or self
   viewer: all
+  # 数据包属性
   mate:
     - equip HEAD item_1
     - displayName " " false
     - visible false
+  # 数据包动作
+  action:
+    - type collection 5
+    - breakCount 10
+    - addBreakCount only 3 itemCheck inv mainHand *'minecraft:wooden_hone'
 
 packet_2:
   # 继承方法
